[package]
name = "markdown_catalogue_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
actix-web = "4"
actix-files = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
strsim = "0.11.1"
rayon = "1.5.3"
